# verbena

./: .gitignore  CITE  CMakeLists.txt  LICENSE  Makefile  README.md  setup.py  verbena  verbena.in
doc/: command.rst  conf.py  index.rst  theory.rst
verbena/: main.py
